--- a/code/03_ensemble_methods.ipynb
+++ b/code/03_ensemble_methods.ipynb
@@ -2,23 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4ce1775f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:30.269537Z",
-     "start_time": "2025-11-20T20:46:29.866329Z"
+     "end_time": "2025-11-21T17:21:28.330369Z",
+     "start_time": "2025-11-21T17:21:28.140201Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Libraries loaded at 21:46:30\n"
-     ]
-    }
-   ],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -40,27 +30,27 @@
     "from catboost import CatBoostRegressor\n",
     "\n",
     "print(f\"Libraries loaded successfully\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d19502ed",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:30.696492Z",
-     "start_time": "2025-11-20T20:46:30.289235Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training: (208910, 21), Test: (52228, 20)\n"
+      "Libraries loaded successfully\n"
      ]
     }
    ],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "id": "d19502ed",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:28.792515Z",
+     "start_time": "2025-11-21T17:21:28.334338Z"
+    }
+   },
    "source": [
     "# Load data\n",
     "train_df = pd.read_csv('../data/training_data.csv')\n",
@@ -70,27 +60,27 @@
     "test_df['timestamp'] = pd.to_datetime(test_df['timestamp'])\n",
     "\n",
     "print(f\"Training: {train_df.shape}, Test: {test_df.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0e9a1bee",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:30.710655Z",
-     "start_time": "2025-11-20T20:46:30.702908Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature engineering loaded\n"
+      "Training: (208910, 21), Test: (52228, 20)\n"
      ]
     }
    ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "id": "0e9a1bee",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:28.813296Z",
+     "start_time": "2025-11-21T17:21:28.805981Z"
+    }
+   },
    "source": [
     "# Feature engineering (V1 working baseline)\n",
     "def engineer_features(df, is_training=True):\n",
@@ -165,28 +155,27 @@
     "    return df\n",
     "\n",
     "print(\"Feature engineering loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "698d7098",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:31.284946Z",
-     "start_time": "2025-11-20T20:46:30.743Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Engineering features...\n",
-      "Features: 56, Samples: 208910\n"
+      "Feature engineering loaded\n"
      ]
     }
    ],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "id": "698d7098",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:29.515329Z",
+     "start_time": "2025-11-21T17:21:28.820360Z"
+    }
+   },
    "source": [
     "# Apply feature engineering\n",
     "print(\"Engineering features...\")\n",
@@ -204,27 +193,28 @@
     "X_test = test_eng[common_features].replace([np.inf, -np.inf], np.nan).fillna(X.median())\n",
     "\n",
     "print(f\"Features: {len(common_features)}, Samples: {len(X)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3d053de9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:31.477108Z",
-     "start_time": "2025-11-20T20:46:31.289716Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: (167128, 56), Val: (41782, 56), Test: (52228, 56)\n"
+      "Engineering features...\n",
+      "Features: 56, Samples: 208910\n"
      ]
     }
    ],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "id": "3d053de9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:29.731665Z",
+     "start_time": "2025-11-21T17:21:29.521748Z"
+    }
+   },
    "source": [
     "# Train/val split (chronological)\n",
     "split_idx = int(len(X) * 0.8)\n",
@@ -238,7 +228,17 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "print(f\"Train: {X_train_scaled.shape}, Val: {X_val_scaled.shape}, Test: {X_test_scaled.shape}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (167128, 56), Val: (41782, 56), Test: (52228, 56)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -252,24 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "b5d32f65",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:31.550680Z",
-     "start_time": "2025-11-20T20:46:31.490332Z"
+     "end_time": "2025-11-21T17:21:29.930896Z",
+     "start_time": "2025-11-21T17:21:29.739205Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "V3 Optuna model loaded\n",
-      "Best params: {'n_estimators': 122, 'max_depth': 10, 'learning_rate': 0.07892088537783623, 'subsample': 0.9643277841436972, 'colsample_bytree': 0.8461153336744716, 'min_child_weight': 2, 'gamma': 0.22008801184179053, 'reg_alpha': 0.25434516986057043, 'reg_lambda': 1.0387903175891995}\n"
-     ]
-    }
-   ],
    "source": [
     "# Load V3 Optuna model and study\n",
     "with open('../models/v3_optuna_model.pkl', 'rb') as f:\n",
@@ -280,7 +269,18 @@
     "\n",
     "print(\"V3 Optuna model loaded\")\n",
     "print(f\"Best params: {v3_study.best_params}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V3 Optuna model loaded\n",
+      "Best params: {'n_estimators': 236, 'max_depth': 10, 'learning_rate': 0.05511868916364675, 'subsample': 0.8021000422933029, 'colsample_bytree': 0.8194689987438017, 'min_child_weight': 6, 'gamma': 0.24321621843196442, 'reg_alpha': 0.041198122026787916, 'reg_lambda': 1.4331550532505222}\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -294,24 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "80e9607a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:33.648249Z",
-     "start_time": "2025-11-20T20:46:31.558360Z"
+     "end_time": "2025-11-21T17:21:33.684235Z",
+     "start_time": "2025-11-21T17:21:29.940387Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training LightGBM...\n",
-      "LightGBM MAE: 6.8319\n"
-     ]
-    }
-   ],
    "source": [
     "# Train LightGBM (different algorithm, may capture different patterns)\n",
     "print(\"Training LightGBM...\")\n",
@@ -329,28 +318,28 @@
     "lgb_pred = lgb_model.predict(X_val_scaled)\n",
     "lgb_mae = mean_absolute_error(y_val, lgb_pred)\n",
     "print(f\"LightGBM MAE: {lgb_mae:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "570ab7c6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:37.748809Z",
-     "start_time": "2025-11-20T20:46:33.735253Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training CatBoost...\n",
-      "CatBoost MAE: 8.3837\n"
+      "Training LightGBM...\n",
+      "LightGBM MAE: 6.8319\n"
      ]
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "id": "570ab7c6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:39.784378Z",
+     "start_time": "2025-11-21T17:21:35.515964Z"
+    }
+   },
    "source": [
     "# Train CatBoost (handles categorical features well)\n",
     "print(\"Training CatBoost...\")\n",
@@ -365,34 +354,45 @@
     "cat_pred = cat_model.predict(X_val_scaled)\n",
     "cat_mae = mean_absolute_error(y_val, cat_pred)\n",
     "print(f\"CatBoost MAE: {cat_mae:.4f}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training CatBoost...\n",
+      "CatBoost MAE: 8.3837\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "dd0d198b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:37.839390Z",
-     "start_time": "2025-11-20T20:46:37.801993Z"
+     "end_time": "2025-11-21T17:21:39.863761Z",
+     "start_time": "2025-11-21T17:21:39.807863Z"
     }
    },
+   "source": [
+    "# Evaluate V3 Optuna model on current split\n",
+    "v3_pred = v3_model.predict(X_val_scaled)\n",
+    "v3_mae = mean_absolute_error(y_val, v3_pred)\n",
+    "print(f\"\\nV3 Optuna MAE: {v3_mae:.4f}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "V3 Optuna MAE: 6.0169\n"
+      "V3 Optuna MAE: 5.9447\n"
      ]
     }
    ],
-   "source": [
-    "# Evaluate V3 Optuna model on current split\n",
-    "v3_pred = v3_model.predict(X_val_scaled)\n",
-    "v3_mae = mean_absolute_error(y_val, v3_pred)\n",
-    "print(f\"\\nV3 Optuna MAE: {v3_mae:.4f}\")"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -406,36 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1c04abda",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:37.875699Z",
-     "start_time": "2025-11-20T20:46:37.861998Z"
+     "end_time": "2025-11-21T17:21:39.884813Z",
+     "start_time": "2025-11-21T17:21:39.874693Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Testing ensemble combinations...\n",
-      "============================================================\n",
-      "Simple average (equal weights): 6.4951\n",
-      "Inverse MAE weighted [0.385, 0.339, 0.276]: 6.3736\n",
-      "Heavy V3 [0.7, 0.15, 0.15]: 6.0579\n",
-      "V3 + LightGBM [0.75, 0.25]: 5.9995\n",
-      "\n",
-      "============================================================\n",
-      "BEST ENSEMBLE: V3 + LightGBM\n",
-      "Weights [V3, LGB, Cat]: [0.75, 0.25, 0]\n",
-      "Validation MAE: 5.9995\n",
-      "\n",
-      "Improvement over V3 alone: 0.29%\n"
-     ]
-    }
-   ],
    "source": [
     "# Try different ensemble combinations\n",
     "print(\"\\nTesting ensemble combinations...\")\n",
@@ -497,7 +474,30 @@
     "print(f\"Weights [V3, LGB, Cat]: {best_weights}\")\n",
     "print(f\"Validation MAE: {best_mae:.4f}\")\n",
     "print(f\"\\nImprovement over V3 alone: {((v3_mae - best_mae) / v3_mae * 100):.2f}%\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing ensemble combinations...\n",
+      "============================================================\n",
+      "Simple average (equal weights): 6.4843\n",
+      "Inverse MAE weighted [0.388, 0.337, 0.275]: 6.3560\n",
+      "Heavy V3 [0.7, 0.15, 0.15]: 6.0207\n",
+      "V3 + LightGBM [0.75, 0.25]: 5.9594\n",
+      "\n",
+      "============================================================\n",
+      "BEST ENSEMBLE: V3 + LightGBM\n",
+      "Weights [V3, LGB, Cat]: [0.75, 0.25, 0]\n",
+      "Validation MAE: 5.9594\n",
+      "\n",
+      "Improvement over V3 alone: -0.25%\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -511,27 +511,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1018660c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:37.935996Z",
-     "start_time": "2025-11-20T20:46:37.920221Z"
+     "end_time": "2025-11-21T17:21:39.915429Z",
+     "start_time": "2025-11-21T17:21:39.907632Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training stacking meta-learner...\n",
-      "Stacking MAE: 6.1822\n",
-      "Meta-learner weights: [0.55731145 0.33042253 0.1112475 ]\n",
-      "❌ Stacking (6.1822) worse than weighted ensemble (5.9995)\n"
-     ]
-    }
-   ],
    "source": [
     "# Create meta-features from base models\n",
     "print(\"\\nTraining stacking meta-learner...\")\n",
@@ -552,7 +538,21 @@
     "    best_combo = \"Stacking\"\n",
     "else:\n",
     "    print(f\"Stacking ({stacking_mae:.4f}) did not outperform weighted ensemble ({best_mae:.4f})\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training stacking meta-learner...\n",
+      "Stacking MAE: 6.0897\n",
+      "Meta-learner weights: [0.68429567 0.2236256  0.09045001]\n",
+      "Stacking (6.0897) did not outperform weighted ensemble (5.9594)\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -566,31 +566,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "00f5235e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:38.144655Z",
-     "start_time": "2025-11-20T20:46:37.950966Z"
+     "end_time": "2025-11-21T17:21:40.124311Z",
+     "start_time": "2025-11-21T17:21:39.938645Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Generating test predictions...\n",
-      "\n",
-      "Submission saved: v4_ensemble_submission_20251120-214638.csv\n",
-      "Method: V3 + LightGBM\n",
-      "Predictions - Min: 0.00, Max: 2063.94, Mean: 356.12\n",
-      "\n",
-      "Validation MAE: 5.9995\n",
-      "Expected improvement over V3: 34.43%\n"
-     ]
-    }
-   ],
    "source": [
     "# Generate predictions on test set from all models\n",
     "print(\"\\nGenerating test predictions...\")\n",
@@ -622,27 +604,34 @@
     "print(f\"Method: {best_combo}\")\n",
     "print(f\"Predictions - Min: {submission['active_power'].min():.2f}, Max: {submission['active_power'].max():.2f}, Mean: {submission['active_power'].mean():.2f}\")\n",
     "print(f\"\\nValidation MAE: {best_mae:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7607801f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-20T20:46:38.167700Z",
-     "start_time": "2025-11-20T20:46:38.159599Z"
-    }
-   },
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Models and ensemble info saved\n"
+      "\n",
+      "Generating test predictions...\n",
+      "\n",
+      "Submission saved: ../results/v4_ensemble_submission_20251121-182140.csv\n",
+      "Method: V3 + LightGBM\n",
+      "Predictions - Min: 0.00, Max: 2073.74, Mean: 356.32\n",
+      "\n",
+      "Validation MAE: 5.9594\n"
      ]
     }
    ],
+   "execution_count": 12
+  },
+  {
+   "cell_type": "code",
+   "id": "7607801f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T17:21:40.145373Z",
+     "start_time": "2025-11-21T17:21:40.134649Z"
+    }
+   },
    "source": [
     "# Save models\n",
     "with open('../models/v4_lgb_model.pkl', 'wb') as f:\n",
@@ -664,7 +653,17 @@
     "    pickle.dump(ensemble_info, f)\n",
     "\n",
     "print(\"Models and ensemble info saved\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models and ensemble info saved\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
