--- a/code/05_advanced_improvements.ipynb
+++ b/code/05_advanced_improvements.ipynb
@@ -421,17 +421,17 @@
     "    print(f\"Training model for state: {state}\")\n",
     "    print(f\"{'='*60}\")\n",
     "    \n",
-    "    # Get state-specific data\n",
+    "    # Get state-specific data - fix indexing\n",
     "    train_state_mask = train_eng['state'] == state\n",
-    "    val_state_mask = train_eng.iloc[split_idx:]['state'] == state\n",
-    "    test_state_mask = test_eng['state'] == state\n",
     "    \n",
-    "    train_state_idx = train_state_mask.iloc[:split_idx]\n",
+    "    # Split the state mask into train and val portions\n",
+    "    train_state_idx = train_state_mask.iloc[:split_idx].values\n",
+    "    val_state_idx = train_state_mask.iloc[split_idx:].values\n",
     "    \n",
     "    X_train_state = X_train_scaled[train_state_idx]\n",
-    "    y_train_state = y_train[train_state_idx]\n",
-    "    X_val_state = X_val_scaled[val_state_mask]\n",
-    "    y_val_state = y_val.iloc[split_idx:][val_state_mask]\n",
+    "    y_train_state = y_train.iloc[:split_idx][train_state_idx]\n",
+    "    X_val_state = X_val_scaled[val_state_idx]\n",
+    "    y_val_state = y_val.iloc[split_idx:][val_state_idx]\n",
     "    \n",
     "    print(f\"Training samples: {len(X_train_state)}\")\n",
     "    print(f\"Validation samples: {len(X_val_state)}\")\n",
@@ -443,13 +443,13 @@
     "    # Train XGBoost for this state\n",
     "    if state == 'shutdown':\n",
     "        # Shutdown state: predict near-zero\n",
-    "        model = xgb.XGBRegressor(n_estimators=50, max_depth=3, learning_rate=0.05, random_state=RANDOM_STATE)\n",
+    "        model = xgb.XGBRegressor(n_estimators=50, max_depth=3, learning_rate=0.05, random_state=RANDOM_STATE, n_jobs=-1)\n",
     "    elif state == 'cut_in':\n",
     "        # Cut-in: low wind, careful modeling\n",
-    "        model = xgb.XGBRegressor(n_estimators=100, max_depth=5, learning_rate=0.05, random_state=RANDOM_STATE)\n",
+    "        model = xgb.XGBRegressor(n_estimators=100, max_depth=5, learning_rate=0.05, random_state=RANDOM_STATE, n_jobs=-1)\n",
     "    elif state == 'rated':\n",
     "        # Rated: predict around 2050 kW\n",
-    "        model = xgb.XGBRegressor(n_estimators=100, max_depth=4, learning_rate=0.05, random_state=RANDOM_STATE)\n",
+    "        model = xgb.XGBRegressor(n_estimators=100, max_depth=4, learning_rate=0.05, random_state=RANDOM_STATE, n_jobs=-1)\n",
     "    else:  # normal\n",
     "        # Normal operation: most complex region\n",
     "        model = xgb.XGBRegressor(\n",
@@ -458,10 +458,11 @@
     "            learning_rate=0.05,\n",
     "            subsample=0.8,\n",
     "            colsample_bytree=0.8,\n",
-    "            random_state=RANDOM_STATE\n",
+    "            random_state=RANDOM_STATE,\n",
+    "            n_jobs=-1\n",
     "        )\n",
     "    \n",
-    "    model.fit(X_train_state, y_train_state)\n",
+    "    model.fit(X_train_state, y_train_state, verbose=False)\n",
     "    \n",
     "    # Evaluate\n",
     "    if len(X_val_state) > 0:\n",
