--- a/code/05_advanced_improvements.ipynb
+++ b/code/05_advanced_improvements.ipynb
@@ -429,9 +429,9 @@
     "    val_state_idx = train_state_mask.iloc[split_idx:].values\n",
     "    \n",
     "    X_train_state = X_train_scaled[train_state_idx]\n",
-    "    y_train_state = y_train.iloc[:split_idx][train_state_idx]\n",
+    "    y_train_state = y_train[train_state_idx]  # y_train already only has training portion\n",
     "    X_val_state = X_val_scaled[val_state_idx]\n",
-    "    y_val_state = y_val.iloc[split_idx:][val_state_idx]\n",
+    "    y_val_state = y_val[val_state_idx]  # y_val already only has validation portion\n",
     "    \n",
     "    print(f\"Training samples: {len(X_train_state)}\")\n",
     "    print(f\"Validation samples: {len(X_val_state)}\")\n",
